# kiapi

./: .gitignore  AGENTS.md  ARCHITECTURE.ja.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.ja.md  README.md  SECURITY.md  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  vscode.code-workspace
.github/workflows/: ci.yml  deploy-pages.yml  release-pypi.yml
.mise/tasks/: build  bump-version  ci  clean  download  format  lint  publish  setup  test  verify
.mise/tasks/changelog/: bump-version  extract
.mise/tasks/package/: current  list  select
.mise/tasks/pyproject/: bump-version
.mise/tasks/release/: build  bump-version
.mise/tasks/test-assets/: download
config/: settings.full-template.yaml
docs/concepts/api/: README.ja.md  README.md
docs/concepts/application/: README.ja.md  README.md
docs/concepts/jobs-and-files/: README.ja.md  README.md
docs/concepts/model-lifecycle/: README.ja.md  README.md
docs/concepts/relay/: README.ja.md  README.md
docs/runbooks/release/: README.ja.md  README.md
kiapi/: __init__.py
kiapi/api/: __init__.py  _settings.py  app.py
kiapi/api/_constants/: require_auth.py
kiapi/api/_helpers/: build_openapi.py  build_train_responses.py  get_accept.py  get_ctx.py  get_worker.py  register_capability_endpoints.py  submit_and_maybe_wait.py
kiapi/api/_views/: async_job_response.py  capability_model_spec.py
kiapi/api/chat/_views/: chat_completion_response.py
kiapi/api/files/: router.py
kiapi/api/files/_operations/: get_file_id.py
kiapi/api/image/ernie/: router.py
kiapi/api/image/flux2/: router.py
kiapi/api/image/ideogram4/: router.py
kiapi/api/jobs/_operations/: get_job_id.py
kiapi/api/jobs/_views/: job_delete_response.py
kiapi/api/models/: router.py
kiapi/api/web/: router.py
kiapi/capabilities/: __init__.py
kiapi/capabilities/_exceptions/: CapabilityError.py  ValidationError.py
kiapi/capabilities/_helpers/: get_file_path.py  resolve_file_ref.py
kiapi/capabilities/acestep/: README.ja.md  README.md  __init__.py  worker_subprocess.py
kiapi/capabilities/audiogen/: README.ja.md  __init__.py  _settings.py
kiapi/capabilities/chat/: README.ja.md  README.md  __init__.py
kiapi/capabilities/depthpro/: README.ja.md  __init__.py  _settings.py
kiapi/capabilities/embedding/: README.ja.md  README.md  __init__.py
kiapi/capabilities/ernie/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/capabilities/flux2/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/capabilities/ideogram4/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/capabilities/ltx2/: README.ja.md  README.md  __init__.py
kiapi/capabilities/qwen/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/capabilities/seedvr2/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/capabilities/web/: __init__.py  _settings.py
kiapi/capabilities/zimage/: README.md  __init__.py
kiapi/cli/: __init__.py  cli.py
kiapi/cli/_helpers/: register_all_capabilities.py  run_resources.py  select_specs.py
kiapi/cli/activate/: cli.py
kiapi/cli/check/: cli.py
kiapi/cli/config/: cli.py
kiapi/cli/deactivate/: cli.py
kiapi/cli/run/: asgi.py  cli.py
kiapi/cli/status/: cli.py
kiapi/core/app/: __init__.py
kiapi/core/capability/: __init__.py
kiapi/core/file/: __init__.py
kiapi/core/job/: __init__.py
kiapi/core/logging/: _settings.py
kiapi/core/memory/: __init__.py
kiapi/core/model/: __init__.py
kiapi/core/net/: __init__.py
kiapi/core/relay/: __init__.py  _settings.py
kiapi/core/workdir/: __init__.py  _settings.py
kiapi/core/worker/: _settings.py
kiapi/relay/: __init__.py
kiapi/relay/gcp/: README.ja.md  README.md  __init__.py  _settings.py
kiapi/relay/local/: __init__.py  _settings.py
public/: docs.html  index.html  openapi.json  redoc.html
public/v1/chat/: docs.html  openapi.json  redoc.html
public/v1/embedding/: docs.html  openapi.json  redoc.html
public/v1/web/: docs.html  openapi.json  redoc.html
scripts/: build_pages.py  verify.py  verify_acestep.py  verify_audiogen.py  verify_chat.py  verify_chat_stream.py  verify_depthpro.py  verify_embedding.py  verify_ernie.py  verify_flux2.py  verify_ideogram4.py  verify_ltx2.py  verify_qwen.py  verify_seedvr2.py  verify_web.py  verify_zimage.py
scripts/capabilities/: verify_acestep.py  verify_audiogen.py  verify_chat.py  verify_chat_stream.py  verify_depthpro.py  verify_embedding.py  verify_ernie.py  verify_flux2.py  verify_ideogram4.py  verify_ltx2.py  verify_qwen.py  verify_seedvr2.py  verify_web.py  verify_zimage.py
scripts/relay/: _client.py  _helpers.py  verify.py  verify_gcp.py  verify_local.py
tests/: conftest.py
tests/api/: test_openapi.py
tests/api/web/: test_negotiate_format.py
tests/capabilities/_helpers/: test_attach_mflux_progress.py
tests/cli/config/: conftest.py
tests/cli/service/: conftest.py
tests/cli/status/: test_cli.py
tests/core/app/: test_settings.py
tests/core/file/: test_settings.py
tests/core/workdir/: test_settings.py
tests/core/worker/: test_settings.py
tests/relay/gcp/: test_settings.py
tests/relay/local/: test_settings.py
(+289 files in other folders)
