[project]
name = "kiapi"
version = "0.2.0"
description = "Unified local inference API server for LLM agents on Apple Silicon (MLX): chat, embedding, image, music, sound-effect, and video — one process, one global memory budget, one single-flight queue, unified jobs and files."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "kiarina", email = "kiarinadawa@gmail.com" }]
keywords = [
    "agent",
    "api",
    "apple-silicon",
    "fastapi",
    "local-inference",
    "mlx",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # --- web ---
    # FastAPI 0.137 keeps included routers lazy; build_openapi currently filters
    # app.routes directly and needs flattened APIRoute entries.
    "fastapi<0.137",
    "uvicorn[standard]",
    "click",
    "questionary",
    "pydantic>=2",
    "pyyaml",
    "python-multipart", # multipart/form-data (file uploads)
    # --- shared ---
    # LTX-2 installs mlx-video after uv sync. Its librosa dependency pulls numba,
    # whose current Python 3.12 wheels do not support numpy 2.5 yet.
    "numpy<2.5",
    "platformdirs",
    "pillow",
    "psutil", # process RSS measurement (framework-agnostic fallback)
    "httpx", # web search capability: async HTTP client for the SearXNG backend
    "kiarina-utils-common>=2.2.0",
    # --- embedding capability (mlx-embeddings) ---
    "mlx-embeddings>=0.1.0",
    # --- sound-effect capability (mlx-audiocraft / AudioGen) ---
    "mlx-audiocraft>=0.1.0",
    "soundfile>=0.13.1",
    # --- video capability (mlx-video / LTX-2 distilled) ---
    # GitHub-only upstream is installed by `kiapi activate --family ltx2`
    # as a PythonPackageResource to keep PyPI metadata free of direct URLs.
    # --- chat capability (mlx-vlm) ---
    # mlx-vlm 0.6.3 supports BOTH model_types we use in one install:
    #   qwen3_omni_moe (Qwen3-Omni) and qwen3_5 (Qwen3.6-27B).
    # 0.6.3's get_rope_index rewrite let us drop the Omni prefill_step_size
    # workaround (verified end-to-end); remaining workarounds tracked in docs/mlx-vlm.md.
    "mlx-vlm==0.6.3",
    # transformers' Qwen processors need torch/torchvision (video/image) and
    # torchaudio; mlx-vlm itself does not pull them in.
    "torch",
    "torchvision",
    "torchaudio",
    "mflux>=0.18.0",
    "pydantic-settings-manager>=3.7.0",
]

[project.optional-dependencies]
relay-gcp = [
    "google-cloud-storage>=3.7.0",
    "kiarina-lib-google>=2.2.1",
]

[project.scripts]
kiapi = "kiapi.cli.cli:main"

[project.urls]
Homepage = "https://github.com/kiarina/kiapi"
Repository = "https://github.com/kiarina/kiapi"
Documentation = "https://kiarina.github.io/kiapi/"
Changelog = "https://github.com/kiarina/kiapi/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kiapi"]
artifacts = ["kiapi/capabilities/web/resources/searxng/settings.yml"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.mise",
    "/.python-version",
    "/.vscode",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/Makefile",
    "/config",
    "/dist",
    "/public",
    "/scripts",
    "/searxng",
    "/uv.lock",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "mypy>=1.14.1",
    "ruff>=0.12.1",
    "types-PyYAML>=6.0.12.20250915",
    "httpx2>=2.4.0",
]
lint = [
    "mypy>=1.14.1",
    "ruff>=0.12.1",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
follow_imports = "silent"
incremental = true

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501", # line too long: let the formatter handle it (ignore long strings/comments)
    "B008", # function call in argument defaults: required for FastAPI Depends()
]

[tool.ruff.lint.isort]
known-first-party = ["kiapi"]
